Implement basic login

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <app-root></app-root>
+  <ca-root></ca-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
